--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@quasar/extras": "^1.0.0",
+    "axios": "^1.3.4",
+    "click-outside-vue3": "^4.0.1",
+    "quasar": "^2.0.0",
     "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
+    "vue3-telegram-login": "^0.0.4",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -26,7 +32,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.4.1",
-    "typescript": "~4.5.5"
+    "sass": "1.32.12",
+    "sass-loader": "^12.0.0",
+    "typescript": "~4.5.5",
+    "v-calendar": "^3.0.3",
+    "vue-cli-plugin-quasar": "~5.0.1"
   },
   "eslintConfig": {
     "root": true,
